0.04
 - Update copyright years.

0.03 2023-11-02T20:05:39+01:00
 - Add -r option for print with references. Change default to not print
   references.
 - Fix missing id for print.

0.02 2023-06-22T10:29:53+02:00
 - Add tests.
 - Fix help printing.
 - Fix minimal version of dependencies.
 - Update Module::Install to 1.21 version.

0.01 2023-04-28T20:36:21+02:00
 - First version.