@@ -4,6 +4,7 @@ author:
   - 'Michal Josef Spacek <skim@cpan.org>'
 build_requires:
   English: 0
+  Error::Pure::Utils: 0
   ExtUtils::MakeMaker: 6.36
   File::Object: 0
   File::Spec::Functions: 0
