@@ -29,6 +29,7 @@ resources 'bugtracker' => 'https://github.com/michal-josef-spacek/App-Wikidata-P
 resources 'homepage' => 'https://github.com/michal-josef-spacek/App-Wikidata-Print';
 resources 'repository' => 'git://github.com/michal-josef-spacek/App-Wikidata-Print';
 test_requires 'English' => 0;
+test_requires 'Error::Pure::Utils' => 0;
 test_requires 'File::Object' => 0;
 test_requires 'File::Spec::Functions' => 0;
 test_requires 'Test::More' => 0;
