@@ -1,4 +1,5 @@
 0.04
+ - Add contructor tests.
  - Update copyright years.
 
 0.03 2023-11-02T20:05:39+01:00
